# diff-tweezers

./: LICENSE  README.md  bash_completion  dif.diff  diff_parser.py  pyproject.toml  small.diff  src.diff  tweezers.py
src/tweezers/: cli.py  diff_parser.py  ui.py
tests/: test_hunk_offsets.py
