[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-tweezers"
dynamic = ["version"]
description = "Interactive terminal diff chunk splitter"
authors = [
  { name="Eric Gaudet", email="gaudeteric@email.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
tweezers = "tweezers.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tweezers"]

[tool.setuptools.dynamic]
version = {attr = "tweezers.__version__"}
